--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,11 @@ export(ra)
 export(standardize_coding)
 import(dplyr)
 import(tibble)
+import(utils)
 importFrom(TTR,EMA)
 importFrom(confintr,ci_proportion)
 importFrom(dplyr,lag)
+importFrom(dplyr,mutate)
 importFrom(lubridate,as_date)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
@@ -33,4 +35,11 @@ importFrom(rlang,as_string)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_name)
 importFrom(slider,slide_index)
+importFrom(stats,na.omit)
+importFrom(stats,qt)
+importFrom(stats,sd)
+importFrom(tidyr,fill)
+importFrom(tidyr,nest)
+importFrom(tidyr,unnest)
+importFrom(utils,data)
 importFrom(zoo,rollapplyr)
