--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,26 +8,23 @@ Authors@R:
            email = "l.k.bache-mathiesen@nih.no",
            comment = c(ORCID = "0000-0002-9466-7003"))
 Description: Several functions useful for working with sports science data.
-License: OSTRC license.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Imports:
     dplyr,
     tidyr,
     magrittr,
     purrr,
     tibble,
-    ggplot2,
     lubridate,
-    stringr,
-    readr,
-    forcats,
-    colorspace,
-    scales,
-    testthat,
     slider,
     zoo,
-    TTR
+    TTR,
+    confintr,
+    nplyr,
+    rlang
 Suggests: 
     testthat (>= 2.1.0)
+Depends: R (>= 2.10)
