--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: Several functions useful for working with sports science data.
 License: OSTRC license.
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Imports:
     dplyr,
     tidyr,
@@ -28,6 +28,9 @@ Imports:
     testthat,
     slider,
     zoo,
-    TTR
+    TTR,
+    confintr, 
+    nplyr, 
+    rlang
 Suggests: 
     testthat (>= 2.1.0)
